<resources>
    <string name="app_name">PokeAPI</string>
    <string name="nombre_n_pokemon">Nombre/Nº pokemon</string>
    <string name="pokemon_placeholder">Pokemon</string>
    <string name="pingu_y_la_foca">Pingu y la foca</string>
    <string name="especie">Especie:</string>
    <string name="tipos">Tipos:</string>
    <string name="experiencia_base">Experiencia base:</string>
    <string name="guardar_pokemon">Guardar Pokemon</string>
    <string name="pokemon_registrado_con_el_id">Pokemon registrado con el id:</string>
    <string name="n">Nº:</string>
</resources>